src/css/App.scss
@import "vars.scss";

.App {
  text-align: center;
}

.App-logo {
  animation: App-logo-spin infinite 20s linear;
  height: 40vmin;
  pointer-events: none;
}

.App-header {
  background-color: $primary;
  min-height: 100vh;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  font-size: calc(10px + 2vmin);
  color: $secondary;
}

.App-link {
  color: $accent;
}

.App {
  background-color: $primary;
  color: $secondary;

  .navbar{
    a {
      color: $secondary;
    }
    .active{
      font-weight: bold;
    }
  }

  hr{
    color: $secondary;
    background-color: $secondary;
    margin: 2rem;
  }

  .hand{
    display: flex;
    flex-wrap: nowrap;
    overflow-x: auto;
    .square{
      width: $pokerWidth;
      height: $pokerWidth;
      max-width: $pokerWidth;
      max-height: $pokerWidth;
      min-width: $pokerWidth;
      min-height: $pokerWidth;
      border-radius: 1rem;
      padding: 0;
      margin: 1rem;
    }
  }

  div {
    .poker {
      width: $pokerWidth;
      height: $pokerHeight;
      max-width: $pokerWidth;
    }
    .flip-card{
      transition: transform 0.8s;
      transform-style: preserve-3d;
      //cursor: pointer;
      position: relative;
    }
    .flip-card.is-flipped {
      transform: rotateY(180deg);
    }      
    .card{
      max-height: $pokerHeight;
      min-height: $pokerHeight;
      min-width: $pokerWidth;
      padding: 0;
      border-radius: 1rem;
      margin: 1rem;
      box-shadow: 0rem .2rem .5rem $primaryShadow;
      text-align: left;
      margin: 1rem;
      .card-face{
        position: absolute;
        width: 100%;
        height: 100%;
        backface-visibility: hidden;
      }
      .card-front{
        min-height: 100%;
        object-fit: cover; 
        .card-img {
          border-radius: 1rem;
          min-height: 100%;
          max-height: 100%;
          object-fit: cover; 

        }
      }
      .card-back{
        transform: rotateY(180deg);
      }
      .title{
        color: $secondary;
        padding: .3rem;
        display:inline-block;
        box-shadow: .1rem .1rem .3rem $primaryShadow;
        top: 1.6rem; left: 1.6rem; 
        position:absolute;
        background-color: $primary;
        border-radius: .5rem;
        margin: 0;
        margin-right: 5rem;
      }
      .text{
        color: $secondary;
        text-align: right;
        bottom: .8rem; right: 1.6rem; 
        position:absolute;
        padding: .4rem;
        box-shadow: .1rem .1rem .3rem $primaryShadow;
        background-color: $primary;
        border-radius: .5rem;
        margin-left: 5rem;
      }
      .lvl{
        background-color: $primary;
        box-shadow: .1rem .1rem .3rem $primaryShadow;
        border-radius: .5rem;
        padding: .3rem;
        margin: 0;
        color: $secondary;
        text-align: right;
        align: right;
        bottom: 1.6rem; right: 1.6rem; 
        position:absolute;
      }
      .soldOut {
        background-color: $primary;
        box-shadow: .1rem .1rem .3rem $primaryShadow;
        text-align: center;
        color: $secondary;
        transform: rotateY(0deg) rotate(45deg);
        position: absolute;
        width: 20rem;
        top: 3rem;
        right: -6rem;
      }
    }
  }
  .section {
    .container {
      margin-left: 1rem;
      margin-right: 1rem;
      padding-left: 0;
    }
    .box {
      display:inline;
      padding: .1rem;
      border-style: solid;
      border-radius: .3rem;
      float: left;
      margin-left: 1rem;
    }
    h4 {
      display:inline;
      margin: .5rem;
      margin-top: 1rem;
    }
  }
}


.flex-bio {
  display: flex;
  flex-flow: row wrap;
  justify-content: space-around;
  align-items: center;

  .red {background-color: $red}
  .green {background-color: $green}
  .blue {background-color: $blue}
  .yellow {background-color: $yellow}
  .cyan {background-color: $cyan}
  .magenta {background-color: $magenta}
  
  .stats p {
    margin: 1rem;
  }
  
  .progress {
    margin: .5rem;
    order: 2;
    background-color: $dark-gray;
  
    .progress-bar{
      color: $white;
      font-weight: bold;
      text-align: left;
      padding: .5rem;
    }
  }
}

.flex-bio > * {
  flex: 1 100%;
}

.stat-row {
  flex-flow: row wrap;
  display: flex;
}
.stat-row > * {
  flex: 1 100%;
}


/* Medium screens */
@media all and (min-width: 600px) {
  /* We tell both sidebars to share a row */
  .flex-bio { flex-wrap: nowrap; }
  .stat-row { flex-wrap: nowrap; }
  .card { flex: 1 auto; }
  .stats{ flex: 1 auto; }
}

/* Large screens */
@media all and (min-width: 800px) {
  /* We invert order of first sidebar and main
   * And tell the main element to take twice as much width as the other two sidebars 
   */
  .stats    { flex: 2 auto;  }
}

.flex-container {
  /* We first create a flex layout context */
  display: flex;
  
  /* Then we define the flow direction 
     and if we allow the items to wrap 
   * Remember this is the same as:
   * flex-direction: row;
   * flex-wrap: wrap;
   */
  flex-flow: row wrap;
  
  /* Then we define how is distributed the remaining space */
  justify-content: space-around;
}

@keyframes App-logo-spin {
  from {
    transform: rotate(0deg);
  }
  to {
    transform: rotate(360deg);
  }
}

